python/file-test-data/extras/testTraceback2.err
  File "testTraceback2.py", line ?
    lst = [1,2,3
          ^
SyntaxError: '[' was never closed
